--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -10,7 +10,7 @@
       <h1>Register for TechCon 2024</h1>
       <nav>
         <a href="index.html">Home</a>
-        <a href="about.html"_self">About</a>
+        <a href="about.html">About</a>
         <a href="schedule.html">Schedule</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -18,17 +18,32 @@
     <!-- <label for="username">Username:</label>
 <input type="text" id="username" name="username" placeholder="Enter your username"> -->
     <main>
-        <form action="">
-<label for="name">Full Name</label>
-<input type="text" id="name" name="username" placeholder="Enter your full name">
-<label for="email">Email</label>
-<input type="email" id="email" name="email" placeholder="example@domain.com">
-<label for="password">Password</label>
-<input type="password" id="password" name="password" placeholder="password">
-<label for="checkbox">Terms and conditions</label>
-<input type="checkbox" id="checkbox" name="checkbox">
-<button type="submit">Register Now</button>
-        </form>
+      <form action="">
+        <label for="name">Full Name</label>
+        <input
+          type="text"
+          id="name"
+          name="username"
+          placeholder="Enter your full name"
+        />
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="example@domain.com"
+        />
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="password"
+        />
+        <label for="checkbox">Terms and conditions</label>
+        <input type="checkbox" id="checkbox" name="checkbox" />
+        <button type="submit">Register Now</button>
+      </form>
     </main>
     <footer>&copy;copyright 2024 TechCon</footer>
   </body>
