--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -10,14 +10,16 @@
       <h1>Schedule for TechCon 2024</h1>
       <nav>
         <a href="index.html">Home</a>
-        <a href="about.html"_self">About</a>
+        <a href="about.html">About</a>
         <a href="register.html">Register</a>
         <a href="contact.html">Contact</a>
       </nav>
     </header>
     <main>
       <table>
-        <caption>Detailed Schedule of Events for TechCon 2024</caption>
+        <caption>
+          Detailed Schedule of Events for TechCon 2024
+        </caption>
         <tr>
           <th scope="col">Time</th>
           <th scope="col">Session</th>
